k8s/clusters/homelabrestore01/infrastructure/vault/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: restore-vault
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.31
